# OpenCVToolBox

MSER/: CMakeLists.txt  MyMatOperation.cpp  MyMserRegionProposal.cpp  MyMserRegionProposal.h  fileOperator.cpp  main.cpp
ParseAVICameraCxx/: CMakeLists.txt  CutAVI.cpp  OpenCamera.cpp  Parseavi.cpp  ParsecameraTakeAScreenShot.cpp  ParsecameraWriteToAVI.cpp  WriteAvi.cpp
ParseAVICameraPython/: parseavi.py
mouseCutImage/: selectPointCut.py
mouseGetPoint/: color.py  point.py
opencv-puttext-Chinese/: OpencvText.h  use_it.cpp~  use_it.md
rotateImage/: selectPointCut.py
